# byedpi-gtk

./: README.md  meson.build
.github/workflows/: release.yml  upstream.yml
build-aux/flatpak/: io.github.duckesteles.byedpigtk.yml
data/: io.github.duckesteles.byedpigtk.desktop.in.in  io.github.duckesteles.byedpigtk.metainfo.xml.in  meson.build
packaging/: byedpi-upstream.json  fetch-ciadpi-all.sh
packaging/aur/: PKGBUILD
po/: LINGUAS  byedpi-gtk.pot  fa.po  id.po  ko.po  ru.po  tr.po  vi.po  zh.po
src/: byedpi-gtk.in  meson.build
src/byedpi_gtk/: ciadpi.py  config.py  i18n.py  main.py  settings.py  tray.py  updater.py  window.py
